@@ -7,6 +7,7 @@ The SQL Server adapter for ActiveRecord. If you need the adapter for SQL Server 
 == What's New
 
 * Rails 3.1 prepared statement support leverages cached query plans.
+* We now support your native language date/time formats automatically!
 * Default unicode datatypes! Disable with #enable_default_unicode_types to false.
 * New #lowercase_schema_reflection configuration option for legacy DBs.
 * New dblib connection mode using TinyTDS! Default mode too!
